--- a/Documental/src/java/Bundle.properties
+++ b/Documental/src/java/Bundle.properties
@@ -9,6 +9,7 @@ Administrador_GUINivelAcceso_TituloCabezote=ADMINISTRADOR / NIVELES DE ACCESO
 Administrador_GUITarea_TituloCabezote=ADMINISTRADOR / TAREAS DEL SISTEMA
 Administrador_GUITipoUsuario_TituloCabezote=ADMINISTRADOR / TIPOS DE USUARIO
 Administrador_GUITipoUsuarioTarea_TituloCabezote=ADMINISTRADOR / TAREAS - USUARIO
+Administrador_GUIUsuarioCrear_TituloCabezote=ADMINISTRADOR / CREAR USUARIO
 documental_GUITipoUsuarioTarea_TituloCabezote=ADMINISTRADOR / TAREAS ASIGNADAS POR TIPO DE USUARIO
 
 documental_GUINivelAcceso_Id=Id
@@ -54,3 +55,18 @@ documental_GUITuEtapaCreate_SeleccionEtapas=Seleccione Etapas:
 documental_GUITuEtapaCreate_Messages_pCreateTuEtapaExitoso="Se Cargaron Correctamente las Etapas"
 documental_GUITuEtapaCreate_Messages_pCreateTuEtapaErroneo="Ocurrio un error al cargar las Etapas, consulte con el administrador del sistema"
 documental_GUITuEtapaTareaCreate_SeleccionTareas=Seleccione Tareas:
+
+documental_GUIUsuario_Nombre=Nombre
+documental_GUIUsuario_Apellido=Apellido
+documental_GUIUsuario_Estado=Estado
+documental_GUIUsuario_Correo=Correo
+documental_GUIUsuario_TipoUsuario=Tipo Usuario
+documental_GUIUsuario_Login=Login
+documental_GUIUsuario_Messages_pNombre=Es obligatorio que indique un nombre para el usuario
+documental_GUIUsuario_Messages_pApellido=Es obligatorio que indique un apellido para el usuario
+documental_GUIUsuario_Messages_pCorreo=Es obligatorio que indique un correo para el usuario
+documental_GUIUsuario_Messages_pLogin=Es obligatorio que indique un login para el usuario
+documental_GUIUsuario_Messages_pCreateUsuarioExitoso="Se Creo Correctamente El nuevo usuario"
+documental_GUIUsuario_Messages_pCreateUsuarioErroneo="Ocurrio un error al crear El nuevo usuario, consulte con el administrador del sistema"
+documental_GUIUsuario_Messages_pEditUsuarioExitoso="Se Modifico Correctamente El usuario"
+documental_GUIUsuario_Messages_pEditUsuarioErroneo="Ocurrio un error al Editar El usuario, consulte con el administrador del sistema"
