Se agrega la vista GUIRadicar Se agrega el RadicacionController Se agrega LoingDTO Se agregan las enumeraciones de los estados y prioridad

--- a/Documental/src/java/Bundle.properties
+++ b/Documental/src/java/Bundle.properties
@@ -10,6 +10,7 @@ Administrador_GUITarea_TituloCabezote=ADMINISTRADOR / TAREAS DEL SISTEMA
 Administrador_GUITipoUsuario_TituloCabezote=ADMINISTRADOR / TIPOS DE USUARIO
 Administrador_GUITipoUsuarioTarea_TituloCabezote=ADMINISTRADOR / TAREAS - USUARIO
 documental_GUITipoUsuarioTarea_TituloCabezote=ADMINISTRADOR / TAREAS ASIGNADAS POR TIPO DE USUARIO
+documental_GUIRadicar_TituloCabezote=RADICACION / ENTRADA
 
 documental_GUINivelAcceso_Id=Id
 documental_GUINivelAcceso_Descripcion=Descripci\u00f3n
@@ -54,3 +55,18 @@ documental_GUITuEtapaCreate_SeleccionEtapas=Seleccione Etapas:
 documental_GUITuEtapaCreate_Messages_pCreateTuEtapaExitoso="Se Cargaron Correctamente las Etapas"
 documental_GUITuEtapaCreate_Messages_pCreateTuEtapaErroneo="Ocurrio un error al cargar las Etapas, consulte con el administrador del sistema"
 documental_GUITuEtapaTareaCreate_SeleccionTareas=Seleccione Tareas:
+
+documental_GUIRadicar_titulo_cabezote=Ingrese los datos solicitados para crear el usuario
+documental_GUIRadicar_formulario_hora=Fecha y Hora
+documental_GUIRadicar_formulario_archivo=Archivo
+documental_GUIRadicar_formulario_emisor=Emisor
+documental_GUIRadicar_formulario_destinatario=Destinatario
+documental_GUIRadicar_formulario_estado=Estado
+documental_GUIRadicar_formulario_prioridad=Prioridad
+documental_GUIRadicar_formulario_palabrasclaves=Palabras Claves
+documental_GUIRadicar_formulario_findocumento=Este documento es 
+documental_GUIRadicar_formulario_aprobacion=para aprobaci\u00f3n
+documental_GUIRadicar_formulario_visualizacion=para visualizaci\u00f3n
+documental_GUIRadicar_formulario_firmadoc=Firmado
+documental_GUIRadicar_formulario_firmado=Si
+documental_GUIRadicar_formulario_sinfirma=No
