Añadido Actualizar Usuario

--- a/Documental/src/java/Bundle.properties
+++ b/Documental/src/java/Bundle.properties
@@ -11,7 +11,8 @@ Administrador_GUITipoUsuario_TituloCabezote=ADMINISTRADOR / TIPOS DE USUARIO
 Administrador_GUITipoUsuarioTarea_TituloCabezote=ADMINISTRADOR / TAREAS - USUARIO
 Administrador_GUIUsuarioCrear_TituloCabezote=ADMINISTRADOR / CREAR USUARIO
 Administrador_GUIDependencia_TituloCabezote=ADMINISTRADOR / DEPENDENCIAS
-Administrador_GUIUsuarioConsultar_TituloCabezote=ADMINISTRADOR / CONSULTAR USUARIOS 
+Administrador_GUIUsuarioConsultar_TituloCabezote=ADMINISTRADOR / CONSULTAR USUARIOS
+Administrador_GUIUsuarioEditar_TituloCabezote=ADMINISTRADOR / EDITAR USUARIOS  
 
 documental_GUITipoUsuarioTarea_TituloCabezote=ADMINISTRADOR / TAREAS ASIGNADAS POR TIPO DE USUARIO
 documental_GUIRadicar_TituloCabezote=RADICACION / ENTRADA
