14/07/2015 - Se suben cambios para corregir las siguientes incidencias:
Incidencia Actualizar-Modificar Usuario
Incidencia Crear Usuario
Incidencia Consultar Usuarios

--- a/Documental/src/java/Bundle.properties
+++ b/Documental/src/java/Bundle.properties
@@ -102,12 +102,15 @@ documental_GUIUsuario_Apellido=Apellido
 documental_GUIUsuario_Estado=Estado
 documental_GUIUsuario_Correo=Correo
 documental_GUIUsuario_TipoUsuario=Tipo Usuario
-documental_GUIUsuario_Login=Login
+documental_GUIUsuario_Login=Usuario
+documental_GUIUsuario_Contrasena=Contrase\u00f1a
 documental_GUIUsuario_Messages_pNombre=Es obligatorio que indique un nombre para el usuario
 documental_GUIUsuario_Messages_pApellido=Es obligatorio que indique un apellido para el usuario
 documental_GUIUsuario_Messages_pCorreo=Es obligatorio que indique un correo para el usuario
 documental_GUIUsuario_Messages_pLogin=Es obligatorio que indique un login para el usuario
+documental_GUIUsuario_Messages_pContrasena=Es obligatorio que indique una contrase\u00f1a para el usuario
 documental_GUIUsuario_Messages_pCreateUsuarioExitoso="Se Creo Correctamente El nuevo usuario"
 documental_GUIUsuario_Messages_pCreateUsuarioErroneo="Ocurrio un error al crear El nuevo usuario, consulte con el administrador del sistema"
+documental_GUIUsuario_Messages_pCreateUsuarioExcepcion="Ocurrio un error al crear El nuevo usuario, el usuario ya se encuntra en uso"
 documental_GUIUsuario_Messages_pEditUsuarioExitoso="Se Modifico Correctamente El usuario"
 documental_GUIUsuario_Messages_pEditUsuarioErroneo="Ocurrio un error al Editar El usuario, consulte con el administrador del sistema"
