Creacion de Funcionalidad para creacion de usuarios de tipo director y empleado asignando una dependencia

--- a/Documental/src/java/Bundle.properties
+++ b/Documental/src/java/Bundle.properties
@@ -104,6 +104,7 @@ documental_GUIUsuario_Correo=Correo
 documental_GUIUsuario_TipoUsuario=Tipo Usuario
 documental_GUIUsuario_Login=Usuario
 documental_GUIUsuario_Contrasena=Contrase\u00f1a
+documental_GUIUsuario_Dependencia=Dependencia
 documental_GUIUsuario_Messages_pNombre=Es obligatorio que indique un nombre para el usuario
 documental_GUIUsuario_Messages_pApellido=Es obligatorio que indique un apellido para el usuario
 documental_GUIUsuario_Messages_pCorreo=Es obligatorio que indique un correo para el usuario
