--- a/Documental/src/java/Bundle.properties
+++ b/Documental/src/java/Bundle.properties
@@ -115,3 +115,5 @@ documental_GUIUsuario_Messages_pCreateUsuarioErroneo="Ocurrio un error al crear 
 documental_GUIUsuario_Messages_pCreateUsuarioExcepcion="Ocurrio un error al crear El nuevo usuario, el usuario ya se encuntra en uso"
 documental_GUIUsuario_Messages_pEditUsuarioExitoso="Se Modifico Correctamente El usuario"
 documental_GUIUsuario_Messages_pEditUsuarioErroneo="Ocurrio un error al Editar El usuario, consulte con el administrador del sistema"
+
+documental_GUIBandeja_Detalle = Detalle del documento
