--- a/Documental/src/java/Bundle.properties
+++ b/Documental/src/java/Bundle.properties
@@ -28,6 +28,14 @@ documental_GUINivelAcceso_Messages_pEditNivelErroneo="Ocurrio un error al Editar
 documental_GUINivelAcceso_Messages_pEliminarNivelExitoso="Se Elimino Correctamente El nivel de acceso"
 documental_GUINivelAcceso_Messages_pEliminarNivelErroneo="Ocurrio un error al Eliminar El nivel, consulte con el administrador del sistema"
 
+documental_GUIDocumento_Consulta_TituloCabezote=CONSULTAS / DOCUMENTOS
+documental_GUIDocumento_Consulta_Fecha_Inicial=Fecha Inicial
+documental_GUIDocumento_Consulta_Fecha_Final=Fecha Final
+documental_GUIDocumento_Consulta_Estado=Estado
+documental_GUIDocumento_Consulta_Tipo_Documento=Tipo de Documento
+documental_GUIDocumento_Consulta_Resposable=Responsable
+documental_GUIDocumento_Consulta_Visibilidad=Visibilidad
+
 documental_GUITarea_Id=Id
 documental_GUITarea_Descripcion=Nombre Tarea
 documental_GUITarea_Messages_pCreateTareaExitoso="Se Creo Correctamente La nueva Tarea"
