--- a/Documental/src/java/Bundle.properties
+++ b/Documental/src/java/Bundle.properties
@@ -16,6 +16,7 @@ Administrador_GUIUsuarioEditar_TituloCabezote=ADMINISTRADOR / EDITAR USUARIOS
 
 documental_GUITipoUsuarioTarea_TituloCabezote=ADMINISTRADOR / TAREAS ASIGNADAS POR TIPO DE USUARIO
 documental_GUIRadicar_TituloCabezote=RADICACION / ENTRADA
+documental_GUIAnexo_TituloCabezote=ADJUNTAR ANEXO
 
 documental_GUINivelAcceso_Id=Id
 documental_GUINivelAcceso_Descripcion=Descripci\u00f3n
@@ -27,14 +28,6 @@ documental_GUINivelAcceso_Messages_pEditNivelExitoso="Se Modifico Correctamente 
 documental_GUINivelAcceso_Messages_pEditNivelErroneo="Ocurrio un error al Editar El nivel, consulte con el administrador del sistema"
 documental_GUINivelAcceso_Messages_pEliminarNivelExitoso="Se Elimino Correctamente El nivel de acceso"
 documental_GUINivelAcceso_Messages_pEliminarNivelErroneo="Ocurrio un error al Eliminar El nivel, consulte con el administrador del sistema"
-
-documental_GUIDocumento_Consulta_TituloCabezote=CONSULTAS / DOCUMENTOS
-documental_GUIDocumento_Consulta_Fecha_Inicial=Fecha Inicial
-documental_GUIDocumento_Consulta_Fecha_Final=Fecha Final
-documental_GUIDocumento_Consulta_Estado=Estado
-documental_GUIDocumento_Consulta_Tipo_Documento=Tipo de Documento
-documental_GUIDocumento_Consulta_Resposable=Responsable
-documental_GUIDocumento_Consulta_Visibilidad=Visibilidad
 
 documental_GUITarea_Id=Id
 documental_GUITarea_Descripcion=Nombre Tarea
@@ -80,7 +73,13 @@ documental_GUITuEtapaCreate_Messages_pCreateTuEtapaExitoso="Se Cargaron Correcta
 documental_GUITuEtapaCreate_Messages_pCreateTuEtapaErroneo="Ocurrio un error al cargar las Etapas, consulte con el administrador del sistema"
 documental_GUITuEtapaTareaCreate_SeleccionTareas=Seleccione Tareas:
 
-documental_GUIRadicar_titulo_cabezote=Ingrese los datos solicitados para crear el usuario
+
+documental_GUIAnexo_Messages_error_consulta_documento=Ocurrio un error al consultar el documento, no se pudieron cargar los anexos
+documental_GUIAnexo_formulario_documento=Documento asociado
+documental_GUIAnexo_Messages_pActualizacionAnexosExitosa=La actualizacion de los anexos del documento fue existosa
+documental_GUIAnexo_Messages_pActualizacionAnexosErroneo=Ocurrio un error al actualizar los anexos del documento
+
+documental_GUIRadicar_titulo_cabezote=Ingrese los datos solicitados para radicar el documento
 documental_GUIRadicar_formulario_hora=Fecha y Hora
 documental_GUIRadicar_formulario_archivo=Archivo
 documental_GUIRadicar_formulario_emisor=Emisor
@@ -112,7 +111,6 @@ documental_GUIUsuario_Correo=Correo
 documental_GUIUsuario_TipoUsuario=Tipo Usuario
 documental_GUIUsuario_Login=Usuario
 documental_GUIUsuario_Contrasena=Contrase\u00f1a
-documental_GUIUsuario_Dependencia=Dependencia
 documental_GUIUsuario_Messages_pNombre=Es obligatorio que indique un nombre para el usuario
 documental_GUIUsuario_Messages_pApellido=Es obligatorio que indique un apellido para el usuario
 documental_GUIUsuario_Messages_pCorreo=Es obligatorio que indique un correo para el usuario
@@ -123,5 +121,3 @@ documental_GUIUsuario_Messages_pCreateUsuarioErroneo="Ocurrio un error al crear 
 documental_GUIUsuario_Messages_pCreateUsuarioExcepcion="Ocurrio un error al crear El nuevo usuario, el usuario ya se encuntra en uso"
 documental_GUIUsuario_Messages_pEditUsuarioExitoso="Se Modifico Correctamente El usuario"
 documental_GUIUsuario_Messages_pEditUsuarioErroneo="Ocurrio un error al Editar El usuario, consulte con el administrador del sistema"
-
-documental_GUIBandeja_Detalle = Detalle del documento
