--- a/Documental/web/WEB-INF/web.xml
+++ b/Documental/web/WEB-INF/web.xml
@@ -25,7 +25,22 @@
         <param-name>primefaces.THEME</param-name>  
         <param-value>start</param-value>                  
     </context-param> 
-  
+    <filter>
+      <filter-name>PrimeFaces FileUpload Filter</filter-name>
+      <filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
+      <init-param>
+        <param-name>uploadDirectory</param-name>
+        <param-value>resources/anexos/temp</param-value>
+      </init-param>
+      <init-param>
+        <param-name>thresholdSize</param-name>
+        <param-value>51200</param-value>
+      </init-param>
+    </filter>
+    <filter-mapping>
+      <filter-name>PrimeFaces FileUpload Filter</filter-name>
+      <servlet-name>Faces Servlet</servlet-name>
+    </filter-mapping>
 <!--     <filter>
         <filter-name>PrimeFaces FileUpload Filter</filter-name>
         <filter-class>
