--- a/Documental/src/java/Bundle.properties
+++ b/Documental/src/java/Bundle.properties
@@ -29,6 +29,14 @@ documental_GUINivelAcceso_Messages_pEditNivelErroneo="Ocurrio un error al Editar
 documental_GUINivelAcceso_Messages_pEliminarNivelExitoso="Se Elimino Correctamente El nivel de acceso"
 documental_GUINivelAcceso_Messages_pEliminarNivelErroneo="Ocurrio un error al Eliminar El nivel, consulte con el administrador del sistema"
 
+documental_GUIDocumento_Consulta_TituloCabezote=CONSULTAS / DOCUMENTOS
+documental_GUIDocumento_Consulta_Fecha_Inicial=Fecha Inicial
+documental_GUIDocumento_Consulta_Fecha_Final=Fecha Final
+documental_GUIDocumento_Consulta_Estado=Estado
+documental_GUIDocumento_Consulta_Tipo_Documento=Tipo de Documento
+documental_GUIDocumento_Consulta_Resposable=Responsable
+documental_GUIDocumento_Consulta_Visibilidad=Visibilidad
+
 documental_GUITarea_Id=Id
 documental_GUITarea_Descripcion=Nombre Tarea
 documental_GUITarea_Messages_pCreateTareaExitoso="Se Creo Correctamente La nueva Tarea"
@@ -111,6 +119,7 @@ documental_GUIUsuario_Correo=Correo
 documental_GUIUsuario_TipoUsuario=Tipo Usuario
 documental_GUIUsuario_Login=Usuario
 documental_GUIUsuario_Contrasena=Contrase\u00f1a
+documental_GUIUsuario_Dependencia=Dependencia
 documental_GUIUsuario_Messages_pNombre=Es obligatorio que indique un nombre para el usuario
 documental_GUIUsuario_Messages_pApellido=Es obligatorio que indique un apellido para el usuario
 documental_GUIUsuario_Messages_pCorreo=Es obligatorio que indique un correo para el usuario
@@ -121,3 +130,5 @@ documental_GUIUsuario_Messages_pCreateUsuarioErroneo="Ocurrio un error al crear 
 documental_GUIUsuario_Messages_pCreateUsuarioExcepcion="Ocurrio un error al crear El nuevo usuario, el usuario ya se encuntra en uso"
 documental_GUIUsuario_Messages_pEditUsuarioExitoso="Se Modifico Correctamente El usuario"
 documental_GUIUsuario_Messages_pEditUsuarioErroneo="Ocurrio un error al Editar El usuario, consulte con el administrador del sistema"
+
+documental_GUIBandeja_Detalle = Detalle del documento
