Añadido detalle de documento en la bandeja de entrada

--- a/Documental/src/java/Bundle.properties
+++ b/Documental/src/java/Bundle.properties
@@ -131,4 +131,4 @@ documental_GUIUsuario_Messages_pCreateUsuarioExcepcion="Ocurrio un error al crea
 documental_GUIUsuario_Messages_pEditUsuarioExitoso="Se Modifico Correctamente El usuario"
 documental_GUIUsuario_Messages_pEditUsuarioErroneo="Ocurrio un error al Editar El usuario, consulte con el administrador del sistema"
 
-documental_GUIBandeja_Detalle = Detalle del documento
+documental_GUIBandeja_Detalle = DETALLE DEL DOCUMENTO
