--- a/Documental/src/java/Bundle.properties
+++ b/Documental/src/java/Bundle.properties
@@ -18,6 +18,8 @@ documental_GUITipoUsuarioTarea_TituloCabezote=ADMINISTRADOR / TAREAS ASIGNADAS P
 documental_GUIRadicar_TituloCabezote=RADICACION / ENTRADA
 documental_GUIAnexo_TituloCabezote=ADJUNTAR ANEXO
 
+documental_GUIComentariosList_TituloCabezote=COMENTARIOS DE DOCUMENTO
+
 documental_GUINivelAcceso_Id=Id
 documental_GUINivelAcceso_Descripcion=Descripci\u00f3n
 documental_GUINivelAcceso_TipoUsuario=Tipo de Usuario
@@ -109,8 +111,10 @@ documental_GUIRadicar_Messages_pCreacionRadicacionErroneo="Ocurrio un error al c
 documental_GUIRadicar_Messages_pCreacionHistoricoExitosa="Se creo correctamente el registro de historico inicial"
 documental_GUIRadicar_Messages_pCreacionHistoricoErroneo="Ocurrio un error al crear el nuevo registro de historico inicial, consulte con el administrador del sistema"
 
-
-
+documental_GUIComentariosList_Label_Comentario=Comentario
+documental_GUIComentariosList_Messages_error_consulta_documento=Ocurrio un error al consultar el documento, no se pudieron cargar los comentarios
+documental_GUIComentariosList_Messages_pActualizacionAnexosExitosa=La actualizacion de los comentarios del documento fue existosa
+documental_GUIComentariosList_Messages_pActualizacionAnexosErroneo=Ocurrio un error al actualizar los comentarios del documento
 
 documental_GUIUsuario_Nombre=Nombre
 documental_GUIUsuario_Apellido=Apellido
@@ -132,3 +136,9 @@ documental_GUIUsuario_Messages_pEditUsuarioExitoso="Se Modifico Correctamente El
 documental_GUIUsuario_Messages_pEditUsuarioErroneo="Ocurrio un error al Editar El usuario, consulte con el administrador del sistema"
 
 documental_GUIBandeja_Detalle = Detalle del documento
+
+
+# ===================================================================
+# Required error
+# ===================================================================
+javax.faces.component.UIInput.REQUIRED=El valor para el campo {0}, es requerido!
