Funcionalidad mostrar historico agregada

--- a/Documental/src/java/Bundle.properties
+++ b/Documental/src/java/Bundle.properties
@@ -132,3 +132,10 @@ documental_GUIUsuario_Messages_pEditUsuarioExitoso="Se Modifico Correctamente El
 documental_GUIUsuario_Messages_pEditUsuarioErroneo="Ocurrio un error al Editar El usuario, consulte con el administrador del sistema"
 
 documental_GUIBandeja_Detalle = Detalle del documento
+
+
+documental_GUIHistorico_TituloCabezote = Historico
+documental_GUIHistorico_Origen = "Origen"
+documental_GUIHistorico_Destino = "Destino"
+documental_GUIHistorico_Fecha = "Fecha"
+documental_GUIHistorico_Comentario = "Comentario"
