--- a/Documental/src/java/Bundle.properties
+++ b/Documental/src/java/Bundle.properties
@@ -38,6 +38,7 @@ documental_GUIDocumento_Consulta_Estado=Estado
 documental_GUIDocumento_Consulta_Tipo_Documento=Tipo de Documento
 documental_GUIDocumento_Consulta_Resposable=Responsable
 documental_GUIDocumento_Consulta_Visibilidad=Visibilidad
+documental_GUIDocumento_Consulta_Palabras_Clave=Palabras Clave
 
 documental_GUITarea_Id=Id
 documental_GUITarea_Descripcion=Nombre Tarea
