--- a/Documental/web/WEB-INF/web.xml
+++ b/Documental/web/WEB-INF/web.xml
@@ -5,6 +5,10 @@
         <param-value>Development</param-value>
     </context-param>
     <context-param>
+        <param-name>anexosfolder</param-name>
+        <param-value>C:/archivos</param-value>
+    </context-param>
+    <context-param>
         <param-name>javax.faces.DATETIMECONVERTER_DEFAULT_TIMEZONE_IS_SYSTEM_TIMEZONE</param-name>
         <param-value>true</param-value>
     </context-param>
