--- a/Documental/src/java/Bundle.properties
+++ b/Documental/src/java/Bundle.properties
@@ -13,6 +13,7 @@ Administrador_GUIUsuarioCrear_TituloCabezote=ADMINISTRADOR / CREAR USUARIO
 Administrador_GUIDependencia_TituloCabezote=ADMINISTRADOR / DEPENDENCIAS
 Administrador_GUIUsuarioConsultar_TituloCabezote=ADMINISTRADOR / CONSULTAR USUARIOS
 Administrador_GUIUsuarioEditar_TituloCabezote=ADMINISTRADOR / EDITAR USUARIOS  
+GestionDocumento_GUIAnexo_TituloCabezote = VER ANEXOS
 
 documental_GUITipoUsuarioTarea_TituloCabezote=ADMINISTRADOR / TAREAS ASIGNADAS POR TIPO DE USUARIO
 documental_GUIRadicar_TituloCabezote=RADICACION / ENTRADA
@@ -159,4 +160,5 @@ documental_GUIHistorico_Origen = "Origen"
 documental_GUIHistorico_Destino = "Destino"
 documental_GUIHistorico_Fecha = "Fecha"
 documental_GUIHistorico_Comentario = "Comentario"
+documental_GUIHistorico_Anexo = "Anexos"
 
