Cambios para mostrar historicos en detalles y se agrega el boton de detalles a consulta

--- a/Documental/src/java/Bundle.properties
+++ b/Documental/src/java/Bundle.properties
@@ -101,6 +101,7 @@ documental_GUIRadicar_formulario_estado=Estado
 documental_GUIRadicar_formulario_prioridad=Prioridad
 documental_GUIRadicar_formulario_tipodocumento=Tipo Documento
 documental_GUIRadicar_formulario_palabrasclaves=Palabras Claves
+documental_GUIRadicar_formulario_anexo=Anexos
 documental_GUIRadicar_formulario_findocumento=Este documento es para
 documental_GUIRadicar_formulario_aprobacion=para aprobaci\u00f3n
 documental_GUIRadicar_formulario_visualizacion=Este documento es
