Cambios en las consultas para incluir el flag de archivado, para archivar de la bandeja de salida las consultas

--- a/Documental/src/java/Bundle.properties
+++ b/Documental/src/java/Bundle.properties
@@ -39,6 +39,7 @@ documental_GUIDocumento_Consulta_Estado=Estado
 documental_GUIDocumento_Consulta_Tipo_Documento=Tipo de Documento
 documental_GUIDocumento_Consulta_Resposable=Responsable
 documental_GUIDocumento_Consulta_Visibilidad=Visibilidad
+documental_GUIDocumento_Consulta_Archivados=Archivados
 documental_GUIDocumento_Consulta_Palabras_Clave=Palabras Clave
 documental_GUIDocumento_Consulta_Dependencia=Dependencia
 
